--- a/web-application/src/main/resources/static/index.html
+++ b/web-application/src/main/resources/static/index.html
@@ -5,28 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Application</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-<div>
-    <select id="entity-select" onchange="handleEntityChange()">
-        <option value="patients">Patient</option>
-        <option value="organizations">Organization</option>
-    </select>
-    <input type="text" id="search-field" placeholder="Search...">
-    <button class="styled-button" onclick="search()">Search</button>
-</div>
-<br/>
-<button id="back-button" class="styled-button" style="display:none;" onclick="goBack()">Back</button>
-<div id="message"></div>
-<div id="loading-overlay" style="display: none;">Loading...</div>
-<table id="data-table">
-    <thead id="table-header"></thead>
-    <tbody id="table-body"></tbody>
-</table>
-<div class="pagination-container">
-    <button id="previous-page-button" class="styled-button" style="display:none;" onclick="goToPreviousPage()">Previous Page</button>
-    <button id="next-page-button" class="styled-button" style="display:none;" onclick="goToNextPage()">Next Page</button>
+<div class="container">
+    <div class="form-inline my-3">
+        <select id="entity-select" class="form-control mr-2" onchange="handleEntityChange()">
+            <option value="patients">Patient</option>
+            <option value="organizations">Organization</option>
+        </select>
+        <input type="text" id="search-field" class="form-control mr-2" placeholder="Search...">
+        <button class="btn styled-button" onclick="search()">Search</button>
+    </div>
+    <button id="back-button" class="btn styled-button mb-3" style="display:none;" onclick="goBack()">Back</button>
+    <div id="message"></div>
+    <div class="table-container">
+        <div id="loading-overlay" style="display: none;">Loading...</div>
+        <div class="table-responsive table-custom-scroll" style="max-height: 700px;">
+            <table id="data-table" class="table table-striped table-bordered">
+                <thead id="table-header" class="thead-light">
+                </thead>
+                <tbody id="table-body">
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div class="pagination-container">
+        <button id="previous-page-button" class="btn styled-button" style="display:none;" onclick="goToPreviousPage()">Previous Page</button>
+        <button id="next-page-button" class="btn styled-button" style="display:none;" onclick="goToNextPage()">Next Page</button>
+    </div>
 </div>
 <script src="main.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
